Updating swagger docs and routes so they work together. Updating user routes now.
